Bug 125589 - UI Sorting of changes does not work in Manage Changes window
Summary: UI Sorting of changes does not work in Manage Changes window
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-05-30 09:04 UTC by NISZ LibreOffice Team
Modified: 2020-08-30 14:58 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Writer (82.07 KB, image/png)
2019-05-30 09:04 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-05-30 09:04:12 UTC
Description:
In the Manage Changes window clicking on a list heading like Author or Date does not sort the entries by that key.

Steps to Reproduce:
    1. Open attachment #72195 [details] 
    2. Make some changes to it: type a word or delete one
    3. Open the Manage Changes Window
    4. Try to sort the old and the new changes by Author or Date

Actual Results:
Column headers change to indicate ascending/descending sorting order, but no actual sorting happens.

Expected Results:
Tracked changes get sorted by author or date.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-05-30 09:04:45 UTC
Created attachment 151778 [details]
Screenshot of the problem in Writer
Comment 2 Gabor Kelemen (Collabora) 2019-05-30 11:48:25 UTC
Bibisected using bibisect-win32-6.3 to:

https://gerrit.libreoffice.org/plugins/gitiles/core/+/56dd851cfc77c362c3db5c0aae4a490c7f6782cc


author
Caolán McNamara <caolanm@redhat.com> Thu Apr 18 16:49:26 2019 +0100 

committer
Caolán McNamara <caolanm@redhat.com> Sat Apr 27 12:41:14 2019 +0200 

tree 0f5f6564e0b9af8123f4cebfe9a2f55c1bbbba57 

parent 6afbe153ffd4cab27f0a7bb77f71f25923dc2e43 [diff] 
weld cluster of change tracking dialogs

Adding CC to Caolán McNamara
Comment 3 Caolán McNamara 2019-06-02 14:55:41 UTC
I believe 6.2 series is ok, and this is a 6.3 only issue, so changing the version to that. Let me know if I'm wrong there.
Comment 4 Commit Notification 2019-06-03 20:17:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e620291e7ce0d7c63a4e23bfcce3fdbd54789469%5E%21

Resolves: tdf#125589 we are initially unsorted

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2019-06-03 20:17:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/418c1d6143dd42e48ef52e0fb8c3d6e5d22c3cfa%5E%21

Resolves: tdf#125589 we are initially unsorted

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-06-04 09:38:59 UTC
Verified in

Version: 6.3.0.0.beta1+
Build ID: 4abdaf4afb2245d404f6709124b3c627b07b8a3c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!