Resolves: tdf#125589 we are initially unsorted

so turn on sorting on first sort request

Change-Id: I897f64c0695be8cca6d93e234a7d7c4718c94f78